# dont-download-two

./: CHANGELOG.md  INSTALL.md  README.md  RELEASE.md  SKILL.md  index.js  mcp.example.json  mcp.python.example.json  music_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json  setup-wizard.js  start.bat
discord_py_self_mcp/: bot.py  cli_runtime.py  logging_utils.py  main.py  rate_limiter.py  setup.py  tool_utils.py
discord_py_self_mcp/captcha/: __init__.py  solver.py
discord_py_self_mcp/tools/: __init__.py  channels.py  discrawl.py  dms.py  embed.py  guilds.py  interactions.py  invites.py  members.py  messages.py  music.py  presence.py  profile.py  reactions.py  registry.py  relationships.py  threads.py  voice.py
telegram-auto-reply/: README.md  auto_reply.py  auto_reply_log.json  auto_reply_session.session  config.json  dashboard.html  group_memory.json  list_chats.py  mcp_server.py  media.py  server.py  start.bat  style_analyzer.py
telegram-auto-reply/memory/: 1139446905.json  1205001452.json  5382941320.json  5526867138.json  6069405430.json  7367737310.json  811413919.json  8296395585.json  QEENSOP395.json  communicationairplane.json  eshkertq998.json  iddan787.json  nixcortic.json
